go-envoy-example/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: http_proxy
                route_config:
                  name: all
                  virtual_hosts:
                    - name: backend_cluster
                      domains:
                        - "f45f-36-85-218-31.ngrok.io"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: backend_cluster
                    - name: backend_cluster2
                      domains:
                        - "localhost"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: backend_cluster2
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: backend_cluster
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: backend_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: docker.for.mac.localhost
                      port_value: 1111
              - endpoint:
                  address:
                    socket_address:
                      address: docker.for.mac.localhost
                      port_value: 2222
    - name: backend_cluster2
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: backend_cluster2
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: docker.for.mac.localhost
                      port_value: 3333
              - endpoint:
                  address:
                    socket_address:
                      address: docker.for.mac.localhost
                      port_value: 4444
